Add overflow-x: hidden.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ html {
 body {
   font-family: 'Open sans', sans-serif;
   font-weight: 300;
+  overflow-x: hidden;
 }
 .navbar a, .sec-about p {
   text-align: center;
